optimize load telegram icon

--- a/src/_partials/header.pug
+++ b/src/_partials/header.pug
@@ -33,7 +33,7 @@ header.header.header-sticky.p-0.mb-4
       li.nav-item.dropdown              
         a.btn.btn-link.nav-link.py-2.px-2.d-flex.align-items-center(href="https://t.me/+NjIJIWJMnGg0YjM6" target="_blank" title="Telegram channel QubicProxyPool")
           svg.icon.icon-lg
-            use(xlink:href="/vendors/@coreui/icons/brand.svg#cib-telegram-plane")
+            use(xlink:href="/dist/assets/icons/brands/telegram-plane.svg")
       li.nav-item.py-1
         .vr.h-100.mx-2.text-body.text-opacity-75
       //--li.nav-item.dropdown
