--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -137,11 +137,11 @@ block view
                 td 3
         // /.table-responsive
 
-      .card.mb-4
+      .card.mb-4.sols-chart
         .card-header
           H3 Solutions
         .card-body.overflow-scroll
-          .c-chart-wrapper(style="height:50vh;max-height:300px;width:100%;min-width:800px")
+          .c-chart-wrapper
             canvas#canvasSolsChart(style="height:100%;width:100%")
 
       .card.mb-4
