--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -20,10 +20,9 @@ block view
   .row
     .col-md-12
       .mb-4
-        .progress(style='height: 3rem; font-size: 1.8em; font-weight: bold; background-color: rgb(50, 58, 73)')
-          .progress-bar.bg-info.progress-bar.progress-bar-striped.progress-bar-animated(id="epoch-progress" role='progressbar' style='width: 10%; overflow: visible;' aria-valuenow='50' aria-valuemin='0' aria-valuemax='100')
-            span(style="margin: 0.5em;") Qubic epoch
-              | 
+        .progress(id="epochProgress")
+          .progress-bar.bg-info.progress-bar.progress-bar-striped.progress-bar-animated(id="epoch-progress" role='progressbar' style='width: 0%; overflow: visible;' aria-valuenow='0' aria-valuemin='0' aria-valuemax='100')
+            span Qubic epoch#{' '}
               span.value 0: 0%
 
 
@@ -77,8 +76,8 @@ block view
                     use(xlink:href="/vendors/@coreui/icons/free.svg#cil-dollar")
                     |
                 .fs-4.fw-semibold 
-                  span 0.000000
-                  | $
+                  span 0.00
+                  | $ 1M
                 .small.text-white.text-opacity-75.text-uppercase.fw-semibold.text-truncate Qubic price
                 .progress.progress-white.progress-thin.mt-3
                   .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
