--- a/src/views/stats.pug
+++ b/src/views/stats.pug
@@ -20,10 +20,9 @@ block view
   .row
     .col-md-12
       .mb-4
-        .progress(style='height: 3rem; font-size: 1.8em; font-weight: bold; background-color: rgb(50, 58, 73)')
+        .progress(id="epochProgress")
           .progress-bar.bg-info.progress-bar.progress-bar-striped.progress-bar-animated(id="epoch-progress" role='progressbar' style='width: 0%; overflow: visible;' aria-valuenow='0' aria-valuemin='0' aria-valuemax='100')
-            span(style="margin: 0.5em;") Qubic epoch
-              | 
+            span Qubic epoch#{' '}
               span.value 0: 0%
               
       p.d-flex.align-items-center.text-info 
