fix scrool for sols chart

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -140,7 +140,7 @@ block view
       .card.mb-4.sols-chart
         .card-header
           H3 Solutions
-        .card-body.overflow-scroll
+        .card-body.overflow-x-auto
           .c-chart-wrapper
             canvas#canvasSolsChart(style="height:100%;width:100%")
 
