add telegram link to register page and updete instruction

--- a/src/views/instruction.pug
+++ b/src/views/instruction.pug
@@ -36,6 +36,12 @@ block view
           p or three underscores:
           p
             b username___worker
+      h2 Hive OS
+      .card.mb-4
+        .card-body
+          p Instruction for HiveOs 
+            a.link-info(href="https://github.com/qubic-li/hiveos" target="_blank") https://github.com/qubic-li/hiveos
+            p "Wallet and worker template" is analogous to alias
 
       h2 Recommendations
       .card.mb-4
