--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -12,6 +12,8 @@ block view
             p.text-body-secondary Create your account
             p.text-body-secondary
               b Registration is currently limited. Need an invitation code
+            p.text-body-secondary
+              b Join the <a href="https://t.me/+NjIJIWJMnGg0YjM6" class="link-info" title="Telegram group QubicProxyPool" target="_blank">Telegram group</a> of pool
             form.needs-validation.form-reg(method="post" action="/register/")
               .input-group.mb-3
                 span.input-group-text
