--- a/src/views/instruction.pug
+++ b/src/views/instruction.pug
@@ -39,9 +39,11 @@ block view
       h2 Hive OS
       .card.mb-4
         .card-body
-          p Instruction for HiveOs 
+          p Instruction for HiveOS: 
             a.link-info(href="https://github.com/qubic-li/hiveos" target="_blank") https://github.com/qubic-li/hiveos
-            p "Wallet and worker template" is analogous to alias
+          p "Wallet and worker template" is analogous to alias
+          p Latest version: 
+            a.link-info(href="https://dl.qubic.li/downloads/qubminer-latest.tar.gz" target="_blank") https://dl.qubic.li/downloads/qubminer-latest.tar.gz
 
       h2 Recommendations
       .card.mb-4
