--- a/src/views/stats.pug
+++ b/src/views/stats.pug
@@ -48,7 +48,7 @@ block view
                     td
                       .d-flex.justify-content-between.align-items-baseline
                         .fw-semibold #{worker[2]}%
-                        //.text-nowrap.small.text-body-secondary.ms-3 Jun 11, 2023 - Jul 10, 2023
+                        .text-nowrap.small.text-body-secondary.ms-3= worker[5]
                       .progress.progress-thin
                         if worker[2] >= 80
                           .progress-bar.bg-success(role='progressbar', style=`width: ${worker[2]}%`, aria-valuenow=worker[2], aria-valuemin='0', aria-valuemax='100')
