--- a/src/views/stats.pug
+++ b/src/views/stats.pug
@@ -38,6 +38,7 @@ block view
                   th.bg-body-secondary(title="Average hashrate only activity minutes") Avg. hashrate
                   th.bg-body-secondary.text-center Activity in the epoch
                   th.bg-body-secondary.text-center Status
+                  th.bg-body-secondary.text-center Accounting
                   th.bg-body-secondary Start activity
                   th.bg-body-secondary Last activity
               tbody
@@ -67,6 +68,12 @@ block view
                         <span class="badge me-1 bg-danger">Danger</span>
                       else
                         <span class="badge me-1 bg-dark">Dead</span>
+                    td.text-center
+                      svg.icon.icon-xl
+                        if worker[6]
+                          use(xlink:href="/vendors/@coreui/icons/free.svg#cil-check")
+                        else
+                          use(xlink:href="/vendors/@coreui/icons/free.svg#cil-x")
                     td= worker[3]
                     td= worker[4]
 
