--- a/src/_partials/about.pug
+++ b/src/_partials/about.pug
@@ -6,7 +6,7 @@ ul
   li Intermediary commission of QubicProxyPool - 1%
   li The calculation of the share of miners is carried out for the era of Qubic from Wednesday 13:00 UTC until the next Wednesday 12:00 UTC, that is 7 days 
   li The first hour of the new epoch is not taken into account due to the transition and connection of new miners
-  li The minimum total worker accounting time for an epoch is 12 hours
+  li.fw-bolder The minimum total worker accounting time for an epoch is 2 days
   li Payouts are made after the epoch has ended (Wednesday 12 UTC), need time to calculate. Without any abnormal activitiy and a stable network, QubicProxyPool will get Qubic coins until Friday (23:59 UTC).  Then payments will be made to users
   li Frequent disconnections and connections to the pool can lead to a ban! Stable mining is important. Pool-hoppers and similar personalities are not needed
   li For Qubic cryptocurrency payments, be sure to specify your wallet (not exchange), registered on the official resource
