--- a/src/_partials/head.pug
+++ b/src/_partials/head.pug
@@ -2,8 +2,8 @@ meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge')
 meta(name='viewport', content='width=device-width, initial-scale=1.0, shrink-to-fit=no')
 title Qubic Proxy Pool
-<meta name="description" content="Pool for cooperative mining in the Qubic crypto  network"> 
-<meta name="Keywords" content="qubic,pool,crypto,coin"> 
+<meta name="description" content="Pool for cooperative mining in the Qubic crypto network with PPSTI reward system"> 
+<meta name="Keywords" content="qubic,pool,crypto,coin,profit,calc"> 
 link(rel='icon', type='image/png', sizes='32x32', href='/assets/favicon/favicon-32x32.png')
 link(rel='icon', type='image/png', sizes='96x96', href='/assets/favicon/favicon-96x96.png')
 link(rel='icon', type='image/png', sizes='16x16', href='/assets/favicon/favicon-16x16.png')
