registration is limited

--- a/src/_layout/public.pug
+++ b/src/_layout/public.pug
@@ -51,9 +51,9 @@ html(lang='en')
               a.nav-link(href="/register/") Register
                   |
           ul.header-nav
-            li.nav-item.py-1
+            //--li.nav-item.py-1
               .vr.h-100.mx-2.text-body.text-opacity-75
-            li.nav-item.dropdown
+            //--li.nav-item.dropdown
               a.btn.btn-link.nav-link.py-2.px-2.d-flex.align-items-center(href="https://t.me/+NjIJIWJMnGg0YjM6" target="_blank" title="Telegram channel QubicProxyPool")
                 svg.icon.icon-lg
                   use(xlink:href="/assets/icons/brands/brand.svg#cib-telegram-plane")
