--- a/src/views/epochs.pug
+++ b/src/views/epochs.pug
@@ -38,7 +38,7 @@ block view
                   th.bg-body-secondary Miner
                   th.bg-body-secondary(title="Average hashrate in the epoch") Avg. hashrate
                   th.bg-body-secondary Solutions
-                  th.bg-body-secondary(title="Percentage of total contribution") Prct. (PPSTI)
+                  th.bg-body-secondary(title="Percentage of total contribution") Prct. (P3TI)
                   th.bg-body-secondary Qubic payout
               tbody
                 tr.align-middle
