--- a/src/views/stats.pug
+++ b/src/views/stats.pug
@@ -85,7 +85,7 @@ block view
                 tr.align-middle
                   th.bg-body-secondary Miners
                   th.bg-body-secondary(title="Average hashrate in the epoch") Avg. hashrate
-                  th.bg-body-secondary(title="Percentage of total contribution") Prct. (PPSTI)
+                  th.bg-body-secondary(title="Percentage of total contribution") Prct. (P3TI)
                   th.bg-body-secondary(title="Current solutions") Current sols (%)
                   th.bg-body-secondary(title="Potential solutions per epoch") Potential sols
                   th.bg-body-secondary(title="Potential revenue per epoch") Potential revenue
