add profit calc

--- a/src/_partials/sidebar.pug
+++ b/src/_partials/sidebar.pug
@@ -38,6 +38,11 @@
           use(xlink:href="/vendors/@coreui/icons/free.svg#cil-chart-pie")
         |  Epochs
     li.nav-item
+      a.nav-link(href='/panel/calc/')
+        svg.nav-icon
+          use(xlink:href="/vendors/@coreui/icons/free.svg#cil-calculator")
+        |  Profit calculator
+    li.nav-item
       a.nav-link(href='/panel/instruction/')
         svg.nav-icon
           use(xlink:href="/vendors/@coreui/icons/free.svg#cil-notes")
