--- a/src/views/profitcalc.pug
+++ b/src/views/profitcalc.pug
@@ -1,14 +1,20 @@
-extends ../_layout/public.pug
+extends ../_layout/default.pug
 
 block styles
-  link(rel='stylesheet' href='/vendors/@coreui/chartjs/css/coreui-chartjs.css')
 
 block scripts
-  //if !starter
-  // Plugins and scripts required by this view
-  script(src='/vendors/@coreui/utils/js/index.js')
-  script(src='/vendors/chart.js/js/chart.umd.js')
-  script(src='/js/main.js')
+  if !starter
+    // Plugins and scripts required by this view
+    script(src='/vendors/@coreui/utils/js/index.js')
+    script(src='/js/main.js')
+
+block breadcrumb
+    +breadcrumb(
+    [
+      { href: '/', label: 'Home'},
+      { label: 'Profit calculator'}
+    ]
+  )
 
 block view
   .row
@@ -105,43 +111,9 @@ block view
                   .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
           // /.col
         // /.row.g-4
+        
       .card.mb-4
         .card-body
-          h1 Qubic Proxy Pool
-          include ../_partials/pool-description.pug
-          h2 Profit calculator
+          h1 Profit calculator
           include ../_partials/profitcalc.pug
- 
-      .card.mb-4           
-        .table-responsive
-          table.table.table-striped.border.mb-0(id="table-miners")
-            thead.fw-semibold.text-nowrap
-              tr.align-middle
-                th.bg-body-secondary Miners
-                th.bg-body-secondary Workers
-                th.bg-body-secondary Hashrate
-                th.bg-body-secondary Solutions
-            tbody
-            //--  tr.align-middle
-                td fa*****
-                td 15
-                td 921 It/s
-                td 3
-              tr.align-middle
-                td ro*****
-                td 15
-                td 921It/s
-                td 3
-        // /.table-responsive
-
-      .card.mb-4.sols-chart
-        .card-header
-          H3 Solutions
-        .card-body.overflow-x-auto
-          .c-chart-wrapper
-            canvas#canvasSolsChart(style="height:100%;width:100%")
-
-      .card.mb-4
-        .card-body
-          include ../_partials/about.pug
-  // /.row
+      
