--- a/src/_partials/header.pug
+++ b/src/_partials/header.pug
@@ -6,10 +6,12 @@ header.header.header-sticky.p-0.mb-4
         |
     ul.header-nav.header-nav-center.d-none.d-lg-flex
       li.nav-item
-        a.nav-link.active(href="/") Dashboard
+        a.nav-link(href="/panel/") Dashboard
       li.nav-item
         a.nav-link(href="/panel/stats/") Statistics
-      //li.nav-item
+      //--li.nav-item
+        a.nav-link.active(href="/panel/payments/") Payments
+      //--li.nav-item
         a.nav-link(href="/epochs/") Epochs
     //--ul.header-nav.ms-auto
       li.nav-item
@@ -31,7 +33,7 @@ header.header.header-sticky.p-0.mb-4
       li.nav-item.py-1
         .vr.h-100.mx-2.text-body.text-opacity-75
       li.nav-item.dropdown              
-        a.btn.btn-link.nav-link.py-2.px-2.d-flex.align-items-center(href="https://t.me/+NjIJIWJMnGg0YjM6" target="_blank" title="Telegram channel QubicProxyPool")
+        a.btn.btn-link.nav-link.py-2.px-2.d-flex.align-items-center(href="https://t.me/+iU3EswEtLfNhZWNi" target="_blank" title="Telegram channel QubicProxyPool")
           svg.icon.icon-lg
             use(xlink:href="/assets/icons/brands/brand.svg#cib-telegram-plane")
       li.nav-item.py-1
