--- a/src/_partials/sidebar.pug
+++ b/src/_partials/sidebar.pug
@@ -32,11 +32,11 @@
           use(xlink:href="/vendors/@coreui/icons/free.svg#cil-description")
         |  Statistics
         //--span.badge.badge-sm.bg-info.ms-auto NEW
-    //li.nav-item
-      a.nav-link(href='/panel/epochs/')
+    li.nav-item
+      a.nav-link(href='/panel/payments/')
         svg.nav-icon
-          use(xlink:href="/vendors/@coreui/icons/free.svg#cil-chart-pie")
-        |  Epochs
+          use(xlink:href="/vendors/@coreui/icons/free.svg#cil-cash")
+        |  Payments
     li.nav-item
       a.nav-link(href='/panel/calc/')
         svg.nav-icon
