fix payments yes/no flag

--- a/src/views/api-payments.pug
+++ b/src/views/api-payments.pug
@@ -35,6 +35,6 @@ div
               td= item[1]
               td #{item[2]}%
               td= item[3]
-              td #{data.currentUser[4] ? 'yes' : 'no'}
+              td #{item[4] ? 'yes' : 'no'}
 
       
